Update a Tema 4 RecyclerView + UnitTest

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="rojoOscuro">#9D1208</color>
     <color name="aquamarina">#00BCD4</color>
     <color name="grisClaro">#9E9E9E</color>
+    <color name="grisMedio">#5F5F5F</color>
 </resources>
