--- a/app/src/main/res/layout/generos.xml
+++ b/app/src/main/res/layout/generos.xml
@@ -4,25 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Search">
+    tools:context=".GenerosActivity">
 
     <!-- Contenedor principal -->
+
+    <!-- BOTTOMBAR -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_height="match_parent"
         android:layout_marginTop="20dp"
+        android:orientation="vertical"
         android:padding="16dp">
 
         <!-- Sección de plataformas -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:text="Plataformas:"
-            android:textStyle="bold"
-            android:textSize="22dp"
             android:textColor="@color/grisClaro"
-            android:layout_marginBottom="8dp"/>
+            android:textSize="22dp"
+            android:textStyle="bold" />
 
         <!-- ChipGroup para plataformas -->
         <com.google.android.material.chip.ChipGroup
@@ -88,16 +90,16 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Géneros:"
-            android:textStyle="bold"
-            android:textSize="22sp"
-            android:textColor="@color/grisClaro"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="8dp"
+            android:text="Géneros:"
+            android:textColor="@color/grisClaro"
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
-        <!-- Lista de géneros -->
-        <ListView
-            android:id="@+id/listaGeneros"
+        <!-- RecyclerView para mostrar la lista de géneros -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerGeneros"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:divider="@android:color/darker_gray"
@@ -105,7 +107,6 @@
 
     </LinearLayout>
 
-    <!-- BOTTOMBAR -->
     <include layout="@layout/botton_bar">
     </include>
 
