--- a/app/src/main/res/layout/new_player.xml
+++ b/app/src/main/res/layout/new_player.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F8F8F8"
-    tools:context=".NewPlayer">
+    tools:context=".NewPlayerActivity">
 
     <!-- TOOLBAR -->
     <include layout="@layout/toolbar_layout">
