--- a/app/src/main/res/layout/preferences.xml
+++ b/app/src/main/res/layout/preferences.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F8F8F8"
-    tools:context=".Preferences">
+    tools:context=".PreferencesActivity">
 
     <include layout="@layout/toolbar_layout">
     </include>
